# Wise-man-bot

./: README.md  bot.py  gdrive.py  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: wf.yml
