[tool.poetry]
name = "Wise man bot"
version = "0.1.0"
description = ""
authors = ["Eevangelion <platonov.ivan347@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
pytelegrambotapi = "^4.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
